/cp 2011-12-20  Paolo Carlini  <paolo.carlini@oracle.com>

PR c++/51612
	* semantics.c (is_valid_constexpr_fn): In case of constexpr
	constructors also check for virtual base classes.

/testsuite
2011-12-20  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/51612
	* g++.dg/cpp0x/constexpr-ice4.C: New.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@182526 138bc75d-0d04-0410-961f-82ee72b054a4